# youtube-transcripts

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
transcripts/: 099hgtRoUZw.txt  15R2pMqU2ok.txt  17O5mgXZ9ZU.txt  2Ds1m5gflCI.txt  2XGREPnlI8U.txt  31wjVhCcI5Y.txt  3_auLYOilb8.txt  4b6bwcWK6GE.txt  6I5I56uVvLw.txt  77CdVSpnUX4.txt  7YGZZcXqKxE.txt  8IWDAqodDas.txt  9tRohh0gErM.txt  BwyZIWeBpRw.txt  DTCmprPCDqc.txt  DkS1pkKpILY.txt  DtmwtjOoSYU.txt  E7W4OQfJWdw.txt  EQ3GjpGq5Y8.txt  FFwA0QFmpQ4.txt  GLgKkG44MGo.txt  GqPGXG5TlZw.txt  GzvzWO0NU50.txt  H-XfCl-HpRM.txt  HXzTbCEqCJc.txt  IAnhFUUCq6c.txt  IOl28gj_RXw.txt  J7SrAEacyf8.txt  JPX8g8ibKFc.txt  JVRyzYB9JSY.txt  K4Ze-Sp6aUE.txt  KPlJcD-o-4Q.txt  KVjfFN89qvQ.txt  LG53Vxum0as.txt  LTGGyQS1fZE.txt  LVxL_p_kToc.txt  Mwz8JprPeMc.txt  NAATB55oxeQ.txt  Nr5xb-QCBGA.txt  O640yAgq5f8.txt  (+73 more)
youtube_transcript/: main.py
youtube_transcripts/: download_transcripts.py  tldr_transcripts.py
